update on contract, some refactoring, first api implementation
